# ska-sdp-spack

./: .flake8  .gitignore  .gitlab-ci.yml  .pylintrc  .readthedocs.yaml  CHANGELOG.rst  CODEOWNERS  LICENSE  Makefile  README.md  pyproject.toml  repo.yaml
docs/src/: conf.py  index.rst
env/aws/: spack.yaml
env/full/: spack.yaml
images/ska-sdp-spack/: Dockerfile
images/ska-sdp-spack-build/: Dockerfile
images/ska-spack/: .dummy  Dockerfile
os/: entrypoint.sh  rockylinux.dockerfile  spack.yaml  ubuntu.dockerfile
py-oskar/: package.py
