[tool.poetry]
authors = [ "Maik Nijhuis <maik.nijhuis@triopsys.nl>" ]
description = "Spack repository for SKA packages"
name = "ska-sdp-spack"
version = "0.0.2"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.10.0"
flake8 = "^7.1.1"
pylint = "^3.3.2"
pylint-junit = "^0.3.4"
