[tool.poetry]
authors = [ "Maik Nijhuis <maik.nijhuis@triopsys.nl>" ]
description = "Spack repository for SKA packages"
name = "ska-sdp-spack"
version = "0.0.2"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
spack = {url = "https://github.com/spack/spack/releases/download/v0.23.0/spack-0.23.0.tar.gz"}
isort = "^5.13.2"
black = "^24.10.0"
flake8 = "^7.1.1"
pylint = "^3.3.2"
pylint-junit = "^0.3.4"

[tool.poetry.group.docs.dependencies]
sphinx = "^8.1.3"
sphinx-rtd-theme = "^3.0.2"
recommonmark = "^0.7.1"

